--- a/_pages/software.html
+++ b/_pages/software.html
@@ -5,7 +5,7 @@ permalink: /software/
 author_profile: true
 ---
 
-https://metasen.shinyapps.io/gen1/
+<a href="https://metasen.shinyapps.io/gen1/">Link to metaSen interface</a>
 
 
 {% include base_path %}
