--- a/_pages/software.html
+++ b/_pages/software.html
@@ -7,6 +7,8 @@ author_profile: true
 
 <a href="https://metasen.shinyapps.io/gen1/">Link to metaSen interface</a> 
 
+<a href="https://metasen.shinyapps.io/gen1/">Link to metaSen interface</a> 
+
 
 {% include base_path %}
 
