--- a/_pages/software.html
+++ b/_pages/software.html
@@ -7,8 +7,9 @@ author_profile: true
 
 <a href="https://metasen.shinyapps.io/gen1/">Link to metaSen interface</a> 
 <br>
+<br>
 
-<a href="https://metasen.shinyapps.io/gen1/">Link to metaSen interface</a> 
+<a href="http://metabus.org//">Link to metaBUS homepage</a> 
 
 
 {% include base_path %}
