--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,7 +4,7 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-More to come soon...
+Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any instructional resources found in this section. 
 
 {% include base_path %}
 
