--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,6 +8,6 @@ Students enrolled in my classes can find all course-related materials in this se
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
+{% for post in site.teaching %}
   {% include archive-single.html %}
 {% endfor %}
