--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,4 +5,6 @@ permalink: /teaching/
 author_profile: true
 ---
 Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any of my instructional resources. 
+TEST
 {% include base_path %}
+{% for post in site.teaching reversed %}
