--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,15 @@ permalink: /teaching/
 author_profile: true
 ---
 Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any of my instructional resources. 
-
 {% include base_path %}
-{% for post in site.teaching reversed %}
+{% capture written_year %}'None'{% endcapture %}
+{% for post in site.posts %}
+  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+  {% if year != written_year %}
+    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
+    {% capture written_year %}{{ year }}{% endcapture %}
+  {% endif %}
   {% include archive-single.html %}
 {% endfor %}
+
 
