--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,7 +7,7 @@ author_profile: true
 Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any of my instructional resources. 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
-{% for post in site.posts %}
+{% for post in site.teaching %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
   {% if year != written_year %}
     <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
