--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,14 +6,9 @@ author_profile: true
 ---
 Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any of my instructional resources. 
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
-{% for post in site.teaching %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
+{% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
 
 
