--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,8 @@ permalink: /teaching/
 author_profile: true
 ---
 Students enrolled in my classes can find all course-related materials in this section. Other educators are permitted to use/share any of my instructional resources. 
+
+TEST TEST
 {% include base_path %}
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
