--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Teaching"
+permalink: /teaching/
 author_profile: true
 ---
 
