--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -1,4 +1,5 @@
 ---
+layout: archive
 title: "TEACHING TEST"
 excerpt: "Short description of teaching item number 1"
 permalink: /teaching/teachingTest
