--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,11 +3,12 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+TEST
 
 {% include base_path %}
 
 
-{% for post in site.teaching %}
+{% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
