--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,9 +1,10 @@
 ---
+layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-TEST
+NEW TEST
 
 {% include base_path %}
 
