--- a/_pages/ILR525.html
+++ b/_pages/ILR525.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "ILR 525"
-permalink: /fall2019/ILR525
+permalink: teaching/fall2019/ILR525
 author_profile: true
 ---
 
