--- a/_pages/software.html
+++ b/_pages/software.html
@@ -18,7 +18,7 @@ Since 2011 I have contributed to <a href="https://metaBUS.org">metaBUS</a> proje
 <p><img src= '/images/metabusMap.PNG'></p>
 <p><img src= '/images/metabusTaxonomy.PNG'></p>
 
-<a href="http://metabus.org//">Link to metaBUS homepage</a> 
+So, take a ride on the 'bus -- visit the <a href="http://metabus.org//">metaBUS homepage</a> to learn more and sign up for a <a href="https://shiny.metabus.org/users/sign-in">free user account</a> to conduct instant targeted meta-analyses! Note that <a href="https://directory.business.vcu.edu/profile.php?urn=fabosco">Dr. Frank Bosco</a> developed the metaBUS interface and, thus, all credit goes to him for creating this awesome tool!
 
 
 {% include base_path %}
