--- a/_pages/software.html
+++ b/_pages/software.html
@@ -10,6 +10,12 @@ author_profile: true
 <br>
 Meta-analytic reviews are the primary means for generating cumulative knowledge and their results are often used to inform evidence-based practice. Although recent research indicates that outliers and publication bias can distort meta-analytic results, analyses are rarely conducted to assess their independent effects. Moreover, analyses that account for the combined effect of these phenomena are almost completely nonexistent. Consequently, the potential non-robustness of meta-analytic results often goes undetected, which brings into question the trustworthiness of our cumulative knowledge. I (along with help from <a href="https://directory.business.vcu.edu/profile.php?urn=fabosco">Dr. Frank Bosco</a>) developed a Shiny interface, called <a href="https://metasen.shinyapps.io/gen1/">metaSen</a>, that will facilitate the conduct of meta-analyses that adhere to recommended reporting standards and best practices. Specifically, this open access software allows users to upload a meta-analytic dataset and provides as output essential meta-analytic and sensitivity analysis results. 
 <br>
+<p><img src= '/images/metasen1.PNG'></p>
+<br>
+<p><img src= '/images/metasen2.PNG'></p>
+<br>
+<p><img src= '/images/metasen3.PNG'></p>
+<br>
 <br>
 <b>metaBUS</b>
 <br>
