--- a/_teaching/_fall2019/ILR525.html
+++ b/_teaching/_fall2019/ILR525.html
@@ -2,10 +2,10 @@
 title: "Fall 2019"
 collection: teaching
 type: ""
-permalink: /teaching/fall2019/ILR525/
+permalink: /teaching/fall2019/
 venue: ""
 date: 2019-08-01
 location: "City, Country"
 
 ---
-
+WHAT ABOUT THIS OTHER TEST??
