--- a/_teaching/_fall2019/ILR525.html
+++ b/_teaching/_fall2019/ILR525.html
@@ -2,7 +2,7 @@
 title: "Fall 2019"
 collection: teaching
 type: ""
-permalink: /teaching/fall2019/
+permalink: /teaching/fall2019/ILR525
 venue: ""
 date: 2019-08-01
 location: "City, Country"
