--- a/_teaching1/teaching1.html
+++ b/_teaching1/teaching1.html
@@ -1,6 +1,6 @@
 ---
 title: "Teaching item number 2"
-excerpt: "Short description of portfolio item number 2"
+excerpt: "Short description of teaching item number 2"
 collection: portfolio
 ---
 
