--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,9 +1,10 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Portfolio"
 permalink: /portfolio/
 author_profile: true
 ---
+
 {% include base_path %}
 
 
