Update and rename portfolio.html to instruction.html

--- a/_pages/instruction.html
+++ b/_pages/instruction.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Teaching"
+permalink: /instruction/
 author_profile: true
 ---
 
