Update and rename instruction.html to portfolio.html

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /instruction/
+title: "Instruction"
+permalink: /portfolio/
 author_profile: true
 ---
 
