--- a/_pages/software.html
+++ b/_pages/software.html
@@ -15,10 +15,10 @@ Meta-analytic reviews are the primary means for generating cumulative knowledge 
 <p><img src= '/images/metasen3.png'></p>
 <b>CASST</b>
 <br>
-Relatively little is known about the extent to which culture moderates findings in applied psychology research. In our paper published in the <i>Journal of International Business Studies</i> we leveraged the metaBUS database of over 1,000,000 published findings to examine the extent to which six popular cross-cultural models explain variance in findings across 136 bivariate relations and 56 individual cultural dimensions. We compared moderating effects attributable to Hofstede’s dimensions, GLOBE’s practices, GLOBE’s values, Schwartz’s Value Survey, Ronen & Shenkar’s cultural clusters, and the United Nations’ M49 standard. Results from 25,296 multilevel meta-analyses indicate that, after accounting for statistical artifacts, cross-cultural models explain approximately 5-7% of the variance in findings. In our paper we introduced a web-based software called CASST (Cross-Area Sample Size Tool; see <a href="https://casst.shinyapps.io/gen1/">) that allows users to interact with our results and can be used by future cross-cultural researchers to aid with a priori sample size estimation. 
-<center><b>Meta-Sen landing page and output</b></center>
-<p><img src= '/images/casst_landingPage.png'></p>
-<p><img src= '/images/casst_example.png'></p>
+Relatively little is known about the extent to which culture moderates findings in applied psychology research. In our paper published in the <i>Journal of International Business Studies</i> we leveraged the metaBUS database of over 1,000,000 published findings to examine the extent to which six popular cross-cultural models explain variance in findings across 136 bivariate relations and 56 individual cultural dimensions. We compared moderating effects attributable to Hofstede’s dimensions, GLOBE’s practices, GLOBE’s values, Schwartz’s Value Survey, Ronen & Shenkar’s cultural clusters, and the United Nations’ M49 standard. Results from 25,296 multilevel meta-analyses indicate that, after accounting for statistical artifacts, cross-cultural models explain approximately 5-7% of the variance in findings. In our paper we introduced a web-based software called CASST (Cross-Area Sample Size Tool; see <a href="https://casst.shinyapps.io/gen1/"></a>) that allows users to interact with our results and can be used by future cross-cultural researchers to aid with a priori sample size estimation. 
+<center><b>CASST landing page and output</b></center>
+<p><img src= '/images/casst_landingPage.PNG'></p>
+<p><img src= '/images/casst_example.PNG'></p>
 
 <b>metaBUS</b>
 <br>
